# fashion_analyzer

./: .deepeval_telemtry.txt  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  application_architecture.drawio  docker-compose-mac.yml  docker-compose-nvidia.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: feedback.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: agent.py  summary.py
backend/app/config/: config.py  config.yml  logging_config.py
backend/app/core/: config.py
backend/app/db/: init_db.py  models.py  vector_store.py
backend/app/exceptions/: sources.py
backend/app/graphs/: chat.py  clothing_search.py  rag.py
backend/app/models/: feedback.py
backend/app/nodes/: action.py  agent.py  clothing_extractor.py  clothing_parser.py  clothing_search.py  end.py  grade_docs.py  retrieve.py  subgraph_start.py  summarize_docs.py
backend/app/schemas/: agent_state.py  chat.py  clothing.py  common.py  config.py  exceptions.py  llm.py  rag.py  should_continue.py  subgraph.py  summary.py
backend/app/services/: agent.py  llm.py  summary.py
backend/app/tools/: qa.py  rag.py  search.py
backend/app/utils/: async_iteration.py  functional.py  rag.py  runs.py  streaming.py
backend/chroma/: chroma.sqlite3
backend/tests/test_data/: test_cases.csv
caddy/: Caddyfile
chroma/: chroma.sqlite3
common/config/: base_config.py
common/db/: minio.py  vector_store.py
common/schemas/: image_metadata.py  llm.py  vector_metadata.py
common/utils/: llm.py  minio.py  reducer.py  time.py  unstructured_io.py  vllm.py
crawler/: Dockerfile  crawler.py  pyproject.toml
crawler/config/: config.py  config.yml  logging_config.py
crawler/db/: minio.py  vector_store.py
crawler/graphs/: crawler_graph.py
crawler/schemas/: config.py  search.py  state.py  vector_metadata.py
crawler/tools/: search_done_tool.py  search_planner_tool.py  search_rephraser_tool.py  search_tool.py
crawler/utils/: json.py  llm.py  metadata.py  minio.py  search_results_processor.py  tavily.py
docs/adr/: 000-pydantic_version.md  001-clothing_search_graph_testing.md  002-ollama_version.md
docs/source/: conf.py  index.rst
docs/source/api/: app.api.rst  app.api.v1.rst  app.core.rst  app.rst  app.schemas.rst  app.services.rst  app.utils.rst
frontend/: .env.example  Dockerfile  package.json  pnpm-lock.yaml
frontend/src/api-client/: index.ts
frontend/src/api-client/core/: OpenAPI.ts
frontend/src/api-client/models/: ChatMessage.ts  Conversation.ts  MessageRole.ts  StreamingDataTypeEnum.ts  StreamingSignalsEnum.ts  WeeklySummaryResponse.ts
frontend/src/api-client/services/: ChatService.ts  SummaryService.ts
frontend/src/components/CodeView/: CodeBlock.tsx
frontend/src/components/CodeView/SideDrawer/: index.tsx
frontend/src/components/ConversationSidebar/: index.tsx
frontend/src/components/ConversationView/: EmptyView.tsx  MessageTextarea.tsx  index.tsx
frontend/src/components/CustomIcons/: Icon.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/ToolActionRenderer/: actions.tsx
frontend/src/components/ToolAppendixRenderer/: index.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/auth/: signin.tsx
frontend/src/pages/chat/: index.tsx
frontend/src/pages/summary/: index.tsx
frontend/src/stores/: conversation.ts
frontend/src/styles/: globals.css
frontend/src/styles/themes/: dark-theme.ts  light-theme.ts
frontend/src/types/: Common.types.ts  Conversation.types.ts
frontend/src/utils/: constants.ts  response.ts
langgraph_test/: agent_chat_test.ipynb  best_clothing_extraction_response.txt  bfs_test_one_parsed_output.txt  clothing_item_extraction_test.ipynb  config.yml  first_good_extraction.txt  first_successful_tool_call_text.txt  gucci_page.html  jcrew_page.html  langgraph_test.ipynb  ollama_test.ipynb  partition_html_test.ipynb  pgvector_test.ipynb  scrape_test.ipynb  simple_web_page_parser.ipynb  test_web_page.html  test_web_page_extraction.txt  vector_store_test.ipynb  vllm_test.ipynb  webcrawler_agent_test.ipynb  womens_dress_test_extract.txt
langgraph_test/chroma/: chroma.sqlite3
langgraph_test/chroma_langchain_db/: chroma.sqlite3
scripts/: create_dbs.sql  init_minio.sh
tests/: conftest.py
tests/graphs/: test_graphs.py
tests/router/: test_router.py
tests/test_data/: test_cases.csv
tests/utils/: create_report.py  deep_eval_langchain_model.py
tests/utils/visuals/: eval_metric_breakdown.py  latency_breakdown.py  overall_pass_rate.py  pass_rate_by_tool.py
(+8 files in other folders)
