[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Gage Anderson <gage@gageanderson.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
langgraph = "^0.2.16"
uvicorn = "^0.30.6"
pydantic-settings = "^2.5.2"
fastapi-limiter = "^0.1.6"
jwt = "^1.3.1"
langchain-ollama = "^0.2.0"
langchain = "^0.3.1"
case-converter = "^1.1.0"
redis = "^5.1.0"
fastapi-cache2 = "^0.2.2"
langchain-community = "^0.3.1"
langchain-openai = "^0.2.1"
langchain-core = "^0.3.7"
langchain-chroma = "^0.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[tool.poetry.scripts]
crawler = "crawler.crawler:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
