[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Gage Anderson <gage@gageanderson.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.112.2"
langgraph = "^0.2.16"
uvicorn = "^0.30.6"
pydantic-settings = "^2.5.2"
fastapi-limiter = "^0.1.6"
jwt = "^1.3.1"
langchain-ollama = "^0.2.0"
langchain = "^0.3.1"
case-converter = "^1.1.0"
redis = "^5.1.0"
fastapi-cache2 = "^0.2.2"
langchain-community = "^0.3.1"
langchain-openai = "^0.2.1"
langchain-core = "^0.3.7"
minio = "^7.2.9"
unstructured = {extras = ["all-docs"], version = "^0.15.13"}
unstructured-ingest = "^0.0.23"
psycopg2-binary = "^2.9.10"
langchain-postgres = "^0.0.12"
psycopg-binary = "^3.2.3"
pygments = "^2.18.0"
playwright = "^1.47.0"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.9"
pre-commit = "^3.8.0"
debugpy = "^1.8.6"

[tool.poetry.scripts]
crawler = "crawler.crawler:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]