[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
langchain = "^0.2.15"
langgraph = "^0.2.16"
redis = "^5.0.8"
uvicorn = "^0.30.6"
pydantic-settings = "^2.5.2"
fastapi-cache = "^0.1.0"
fastapi-limiter = "^0.1.6"
jwt = "^1.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
